--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.woop">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".ui.base.BaseApplication"
         android:allowBackup="true"
@@ -13,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Woop"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <service
             android:name=".firebase.FireMessagingService"
@@ -34,13 +38,13 @@
 
         <activity
             android:name=".ui.detail.PostDetailActivity"
-            android:exported="true" >
+            android:exported="true">
 
         </activity>
 
         <activity
             android:name=".ui.write.WriteActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name=".ui.posts.PostListActivity"
