--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,12 @@
 
         </activity>
 
+        <activity
+            android:name=".ui.GlassActivity"
+            android:exported="false">
+
+        </activity>
+
     </application>
 
 </manifest>
