--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Woop"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <service
@@ -28,6 +27,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.App.Starting"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +45,14 @@
         <activity
             android:name=".ui.write.WriteActivity"
             android:exported="false" >
+        <activity
+            android:name=".ui.detail.PostDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.write.WriteActivity"
+            android:exported="false" />
+
 
         </activity>
 
