--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -39,12 +44,8 @@
 
         <activity
             android:name=".ui.write.WriteActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -56,7 +57,11 @@
         <activity
             android:name=".ui.GlassActivity"
             android:exported="false">
+        </activity>
 
+        <activity
+            android:name=".ui.GlassClickActivity"
+            android:exported="false">
         </activity>
 
     </application>
