--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.Woop"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
             android:name=".firebase.FireMessagingService"
             android:exported="true">
@@ -27,15 +38,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.App.Starting"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="false" />
         <activity
             android:name=".ui.detail.PostDetailActivity"
             android:exported="true">
@@ -48,7 +51,6 @@
         <activity
             android:name=".ui.detail.PostDetailActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.write.WriteActivity"
             android:exported="false" />
@@ -58,12 +60,10 @@
 
         <activity
             android:name=".ui.posts.PostListActivity"
-            android:exported="false">
-
-        </activity>
-
+            android:exported="false"></activity>
         <activity
             android:name=".ui.GlassActivity"
+            android:exported="false"></activity>
             android:exported="false">
         </activity>
 
