--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
             android:name=".ui.GlassActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".ui.GlassClickActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
